--- a/composer.json
+++ b/composer.json
@@ -29,5 +29,6 @@
                 "Editor": "Douyasi\\Editor\\EditorServiceProvider"
             }
         }
-    }
+    },
+    "minimum-stability": "dev"
 }
